--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="circle">3</div>
         <div class="circle">4</div>
       </div>
-      <button class="btn" id="prev">next</button>
+      <button class="btn btn-disable" id="prev">prev</button>
       <button class="btn" id="next">next</button>
     </div>
   </body>
